# aiops_sre

./: ARCHITECTURE_ANALYSIS.md  README.md  fleet_health.txt  logs_source.jsonl  pyproject.toml  run_dashboard.py
knowledge/: playbooks.md
src/aiops_sre/: crew.py  log_generator.py  main.py  monitor.py  streamlit_app.py
src/aiops_sre/config/: agents.yaml  tasks.yaml
src/aiops_sre/tools/: log_tools.py
