[project]
name = "aiops_sre"
version = "0.1.0"
description = "aiops_sre using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.8.1",
    "streamlit>=1.28.0"
]

[project.scripts]
aiops_sre = "aiops_sre.main:run"
run_crew = "aiops_sre.main:run"
train = "aiops_sre.main:train"
replay = "aiops_sre.main:replay"
test = "aiops_sre.main:test"
run_with_trigger = "aiops_sre.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
